--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
-    <meta name="color-scheme" content="dark light" />
+    <meta name="color-scheme" content="dark light" />.
   </head>
   <body class="page">
-    <section class="header__bg">
-      <header class="header decorated-zone">
+    <header class="header__bg">
+      <section class="decorated-zone">
         <nav class="header__theme-menu">
           <ul class="header__theme-menu-list">
             <li class="header__theme-menu-item">
@@ -43,14 +43,14 @@
           </ul>
         </nav>
         <span class="theme__dark-subtext"> REC </span>
-      </header>
+      </section>
       <h1 class="header__title title_decor">no focus</h1>
 
       <blockquote class="header__title-blockquote">
         Что делать, когда не можешь делать ничего<br /> Или
         почему нам так сложно сконцентрироваться, особенно когда очень надо
       </blockquote>
-    </section>
+    </header>
     <main class="content">
       <section class="intro__part">
         <h3 class="intro__title main__title">
