--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
-    <meta name="color-scheme" content="dark light" />.
+    <meta name="color-scheme" content="dark light">
   </head>
   <body class="page">
     <header class="header__bg">
