--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <title>Сложно сосредоточиться</title>
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <meta name="color-scheme" content="dark light">
   </head>
   <body class="page">
     <header class="header__bg">
-      <section class="decorated-zone">
+      <div class="decorated-zone">
         <nav class="header__theme-menu">
           <ul class="header__theme-menu-list">
             <li class="header__theme-menu-item">
@@ -43,26 +44,26 @@
           </ul>
         </nav>
         <span class="theme__dark-subtext"> REC </span>
-      </section>
+      </div>
       <h1 class="header__title title_decor">no focus</h1>
 
-      <blockquote class="header__title-blockquote">
+      <p class="header__title-blockquote">
         Что делать, когда не можешь делать ничего<br /> Или
         почему нам так сложно сконцентрироваться, особенно когда очень надо
-      </blockquote>
+      </p>
     </header>
     <main class="content">
       <section class="intro__part">
-        <h3 class="intro__title main__title">
+        <h2 class="intro__title main__title">
           Почему сосредоточиться так сложно
-        </h3>
+        </h2>
         <article class="card intro-card">
-          <h4 class="card_title">Многозадачность</h4>
+          <h3 class="card_title">Многозадачность</h3>
           <p class="card_subtitle">
             Особенно сложно сосредоточиться, когда задач много и все они —
             важные. Где же легендарная многозадачность, когда она так нужна вам
             (и всем нанимающим менеджерам этого мира)? А дело в том, что её
-            просто не существует. Исследователи <a class="title_decor link" href="#0">выяснили</a>, что мозгу тяжело
+            просто не существует. Исследователи <a class="title_decor link" href="#0" target="_blank">выяснили</a>, что мозгу тяжело
             концентрироваться даже на двух делах одновременно. А когда в поле
             внимания попадает несколько важных задач, организм паникует и
             выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
@@ -70,7 +71,7 @@
           </p>
         </article>
         <article class="card intro-card">
-          <h4 class="card_title">Дофамин</h4>
+          <h3 class="card_title">Дофамин</h3>
           <p class="card_subtitle">
             С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
             невозможности сосредоточиться замешана и полная противоположность
@@ -84,40 +85,40 @@
         </article>
       </section>
       <section class="concentration__part">
-        <h3 class="concentration__title main__title">Что снижает концентрацию внимания?</h3>
+        <h2 class="concentration__title main__title">Что снижает концентрацию внимания?</h2>
         <article class="card concentration__card">
-          <h4 class="card_title">
+          <h3 class="card_title">
             Многозадачность
-          </h4>
+          </h3>
           <p class="card_subtitle">
             Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
           </p>
         </article>
         <article class="card concentration__card">
-          <h4 class="card_title">
+          <h3 class="card_title">
             Еда
-          </h4>
+          </h3>
           <p class="card_subtitle">
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
           </p>
         </article>
         <article class="card concentration__card">
-          <h4 class="card_title">
+          <h3 class="card_title">
             Гаджеты
-          </h4>
+          </h3>
           <p class="card_subtitle">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
           </p>
         </article>
       </section>
       <section class="methods__part">
-        <h3 class="main__title methods__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h3>
+        <h2 class="main__title methods__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <div class="methods__card-list">
-          <h4 class="method__card-list-title card_title">
+          <h3 class="method__card-list-title card_title">
             5 простых (на самом деле не очень) советов
-          </h4>
+          </h3>
           <article class="card methods__card">
-            <h4 class="card_title">
+            <h4 class="card_title methods__card_title">
               Представьте небо и облака
             </h4>
             <p class="card_subtitle">
@@ -125,7 +126,7 @@
             </p>
           </article>
           <article class="card methods__card">
-            <h4 class="card_title">
+            <h4 class="card_title methods__card_title">
               Включите музыку
             </h4>
             <p class="card_subtitle">
@@ -133,7 +134,7 @@
             </p>
           </article>
           <article class="card methods__card">
-            <h4 class="card_title">
+            <h4 class="card_title methods__card_title">
               Прогуляйтесь
             </h4>
             <p class="card_subtitle">
@@ -141,7 +142,7 @@
             </p>
           </article>
           <article class="card methods__card">
-            <h4 class="card_title">
+            <h4 class="card_title methods__card_title">
               Хорошо ешьте
             </h4>
             <p class="card_subtitle">
@@ -149,7 +150,7 @@
             </p>
           </article>
           <article class="card methods__card">
-            <h4 class="card_title">
+            <h4 class="card_title methods__card_title">
               Читайте
             </h4>
             <p class="card_subtitle">
@@ -159,9 +160,9 @@
         </div>
       </section>
       <section class="images__part">
-        <h4 class="card_title">
+        <h3 class="card_title">
           А можно в картинках?
-        </h4>
+        </h3>
         <div class="images__box">
           <img src="./images/sunset.png" alt="картинка с восходом солнце" class="left-top__box">
           <img src="./images/ice-cream.png" alt=" картинка мороженого" class="short__box">
@@ -172,7 +173,7 @@
       </section>
     </main>
     <footer class="footer">
-      <h1 class="header__title title_decor">focus</h1>
+      <h2 class="header__title title_decor">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
