--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>Сложно сосредоточиться</title>
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
-    <link rel="stylesheet" href="./styles/dark.css" />
-    <link rel="stylesheet" href="./styles/light.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <meta name="color-scheme" content="dark light">
   </head>
   <body class="page">
-    <header class="header__bg">
-      <div class="decorated-zone">
+    <header class="header__bg decorated-zone">
+      <div class="header__menu">
         <nav class="header__theme-menu">
           <ul class="header__theme-menu-list">
             <li class="header__theme-menu-item">
@@ -172,8 +172,8 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <h2 class="header__title title_decor">focus</h2>
+    <footer class="footer decorated-zone">
+      <h2 class="footer_title title_decor">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
